Fix table text alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -264,7 +264,6 @@ caption {
 
 th {
 	font-weight: 700;
-	text-align: inherit;
 }
 
 label {
